clusters/map-kube-cluster/Teamspeak/namespace.yml
# namespace named teamspeak
---
apiVersion: v1
kind: Namespace
metadata:
  name: teamspeak
  labels:
    app: teamspeak
