clusters/map-kube-cluster/Teamspeak/deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamspeak
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: teamspeak
  template:
    metadata:
      labels:
        app: teamspeak
    spec:
      containers:
      - image: teamspeak:3.13.7
        name: teamspeak
        ports:
        - name: query
          protocol: TCP
          containerPort: 10011
        - name: filetransfer
          protocol: TCP
          containerPort: 30033
        - name: voice
          protocol: UDP
          containerPort: 9987
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 500Mi
