clusters/map-kube-cluster/Teamspeak/service.yml
---
# service for teamspeak
apiVersion: v1
kind: Service
metadata:
  name: teamspeak
  labels:
    app: teamspeak
  namespace: teamspeak
spec:
  selector:
    app: teamspeak
  ports:
  - name: voice
    targetPort: 9987
    port: 9987
    protocol: UDP
  - name: filetransfer
    targetPort: 30033
    port: 30033
    protocol: TCP
  - name: query
    targetPort: 10011
    port: 10011
    protocol: TCP
  type: LoadBalancer
